2001-06-20  Akihiro MOTOKI <amotoki@dd.iij4u.or.jp>

	* install.el (install-elisp-modules): Do not make DEST directory
	when JUST-PRINT is non-nil.

2001-06-01  Tanaka Akira      <akr@m17n.org>

	* pccl.el (ccl-compat): Since mule 2.3 accepts `t' and `nil' as `type'
	argument, so arguments conversion shouln't applied in such case.
	
2001-05-24  Tanaka Akira      <akr@m17n.org>

	* pccl.el (accept-long-ccl-program): Don't advice for Emacs 21.
	(transform-make-coding-system-args): New emulating function.
	(ccl-compat): new advice for `make-coding-system' of
	Emacs 20 or former to handle XEmacs style CCL coding system definition.

2001-04-29  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (remassoc, remassq, remrassoc, remrassq): Fixed.

2001-03-26  Yuuichi Teranishi  <teranisi@gohome.org>

	* EMU-ELS: Add checking whether the native timezone.el has an old
	date string parser.

2001-03-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* timezone.el (timezone-parse-date): Import from Emacs-20.7.

2001-02-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* emu.el (char-category for XEmacs): Don't use `int-char' when the
	function `char-category-list' returns a list of characters.

2001-02-01  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* README.ja: Updated as to MAKEIT.BAT and MAKE1.BAT.
	* make1.bat: New file.
	* makeit.bat: Ditto.
	* make.bat: Removed.

2001-01-18  Katsumi Yamaoka   <yamaoka@jpl.org>

	* inv-19.el (next-visible-point): Return the value of `point-max'
	when the position of next `invisible' property change is not found.

2001-01-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe-18.el (floor): Removed.

	* timezone.el (timezone-floor): New function.
	(timezone-fix-time-2): Use `timezone-floor' instead of `floor'.

2000-12-31  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* README.ja: Typo fixed.

2000-12-30  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	*  APEL: Version 10.3 released.